--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,12 @@
 @import "tailwindcss";
 
 body {
-  @apply bg-background text-white;
+  @apply text-black bg-white;
+}
+@theme {
+  --color-background: #ffffff;        /* gives you bg-background */
+  --color-background-brown: #4B2615;  /* gives you bg-background-brown */
+  --color-navbar: #4B2615;            /* gives you bg-navbar */
 }
 
 /* Basic RTL helper if needed */
